Fix scroll on ios

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -27,12 +27,14 @@
 .l-wrapper {
   display: flex;
   justify-content: normal;
-  margin: 36px auto 50px auto;
+  //margin: 36px auto 54px auto;
   max-width: 1800px;
-  height: calc(100% - 86px);
+  height: calc(100% - 90px);
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
+  position: absolute;
+  top: 36px;
   //padding-left: 1em;
   //padding-right: 1em;
   //border: red solid 10px;
